# GRAM-ANALYTICS

./: README.md  pyproject.toml
Analyses/EDA/: Notebook_stats_F.ipynb  PCA.ipynb  README.md  Tests_statistiques.ipynb
Analyses/Prediction/: LightGBM.ipynb  README.md  RandomForest.ipynb  XGBoost.ipynb  cross_validation.ipynb
Cleaning/: Data_Cleaning.ipynb  README.md
Data/: README.md
