[project]
name = "GRAM-ANALYTICS"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "elisa", email = "elisa.darthenay@epfedu.fr"},
]
dependencies = ["jupyter>=1.1.1", "pandas>=2.3.0", "numpy>=2.2.6", "matplotlib>=3.10.3", "seaborn>=0.13.2", "scikit-learn>=1.6.1", "lightgbm>=4.6.0", "xgboost>=3.0.2", "imbalanced-learn>=0.13.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
